--- a/assets/css/cmaj_doc_style.css
+++ b/assets/css/cmaj_doc_style.css
@@ -34,6 +34,10 @@
     margin-top: 0pt;
 }
 
+.specialisations{
+    margin-bottom: 3pt;
+}
+
 .specialisations h2:after, .endpoints h2:after, .variables h2:after, .functions h2:after, .structs h2:after, .nodes h2:after, .connections h2:after {
     content: ""; /* This is necessary for the pseudo element to work. */ 
     display: block; /* This will put the pseudo element on its own line. */
@@ -300,14 +304,6 @@ code {
 .namespaceTitle a {
     float: right;
     font-family: var(--code-font);
-}
-
-.specialisations h2, .endpoints h2, .variables h2, .functions h2, .structs h2 {
-    font-size: 14pt!important;
-    padding: 0 0 5.59pt 0!important;
-    color: #2C84FA;
-    padding-left: 16.78pt!important;
-    padding-top: 3pt;
 }
 
 h2 {
